alterada descrição trabalho cardco

--- a/index.html
+++ b/index.html
@@ -203,15 +203,11 @@
 							private label.
 						</p>
 						<ul>
-							<li>Desenvolvimento contínuo e evolução de aplicações web.</li>
-							<li>Desenvolvimento de sites, sistemas, e landing pages para clientes como: Carbel, Atex,
-								Bernoulli,
-								Café Mito, Edersul, MasterCabo, etc.</li>
+							<li>Desenvolvimento contínuo e evolução de aplicações intranet: BackOffice, Callcenter, Módulos de atendimento.</li>
+							<li>Desenvolvimento contínuo e evolução de rotinas e procedimentos PLSQL diários de operações de cartões de crédito.</li>
 							<li>Levantamento de requisitos, estimativas de backlogs, planejamento de execução de
 								tarefas, e gerenciamento de equipe.</li>
-							<li>Tecnologias: C#, .NET Core, ASP.NET, WebForms, WCF, WebServices, EntityFrameWork,
-								SQLServer,
-								JSRender.</li>
+							<li>Tecnologias: C#, .NET Framework, Oracle, WebForms, WCF, WebServices, Xamarin</li>
 						</ul>
 					</div>
 					<!--//details-->
